--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@angular/animations": "~10.0.4",
     "@angular/cdk": "^10.1.0",
-    "@angular/common": "~10.0.4",
+    "@angular/common": "^10.0.5",
     "@angular/compiler": "~10.0.4",
     "@angular/core": "~10.0.4",
     "@angular/forms": "~10.0.4",
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
     "@material-git/radio": "^2.0.0-git.20160919",
+    "ng2-file-upload": "^1.4.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
